framework/tests/framework/UnimportedExtends1.java
// warning: Javac errored; type checking halted.

// :: error: cannot find symbol
public class UnimportedExtends1 extends UnimportedClass {}
